Se elimino testing